removed previous template and added provided template

--- a/craft/templates/index_backup.html
+++ b/craft/templates/index_backup.html
@@ -37,8 +37,8 @@
 		<script type="text/javascript" src="./assets/js/google_analytics.js"></script>
 		<script type="text/javascript" src="./assets/js/angular-parallax.js"></script>
 		<!-- Core Module Scripts -->
-		<!--<script type="text/javascript" src="./assets/js/client-ctrl.js"></script>
-		<script type="text/javascript" src="./assets/js/sitemap-ctrl.js"></script>
+		<script type="text/javascript" src="./assets/js/client-ctrl.js"></script>
+		<!--<script type="text/javascript" src="./assets/js/sitemap-ctrl.js"></script> -->
 		<script type="text/javascript" src="./assets/js/config-ctrl.js"></script>
 		<script type="text/javascript" src="./assets/js/config-drv.js"></script>
 		<script type="text/javascript" src="./assets/js/contact-drv.js"></script>
@@ -47,7 +47,7 @@
 		<script type="text/javascript" src="./assets/modules/footer/footer-drv.js"></script>
 		<script type="text/javascript" src="./assets/modules/header/header-drv.js"></script>
 		<script type="text/javascript" src="./assets/js/nav-drv.js"></script>
-		<script type="text/javascript" src="./assets/js/social-drv.js"></script> -->
+		<script type="text/javascript" src="./assets/js/social-drv.js"></script>
 		<!-- Additional Module Scripts -->
 		
 		<script type="text/javascript" src="./assets/js/slides-drv.js"></script>
