--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="paraData">
 	<head>
+		<title>Paradata | Hackathon</title>
 		<!-- Styles -->
 		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Quicksand:400,300,700">
 		<link type="text/css" rel="stylesheet" href="css/responsive.css">
@@ -64,76 +65,57 @@
 			<div class="hero full" data-parallax="scroll" data-image-src="assets/images/backgrounds/background-homepage-1.jpg">
 				<div class="wrapper middle pad">
 					<h1>
-						Big data powering<br>
-						big decisions
+						TRANSPARENCY MEETS SUPPLY CHAIN
 					</h1>
-					<p style="width:100%;max-width:350px;">
-						Lorem ipsum dolor sit amet, usu tation audiam animal eu, mei dolorum pericula eu. Ut mollis detracto menandri has, libris docendi atomorum duo an.
-					</p>
-					<a class="button" href="#">Get your data score</a>
+					<p style="width:40%;max-width:350px;">
+						THE NETWORK SCORE℠ <br/>
+
+						<i>"If your product could say what it needs to be healthy, what would it say?"</i><br/>
+
+						The Paradata Network Score measures a supply chain in four dimensions: Leadtime, Cost, Compliance, and Risk.
+					</p> l,;./
+					<a class="button" href="#">WHAT'S YOUR SCORE?</a>
 				</div>
 			</div>
 			<slides></slides>
-			<div class="slider full">
-				<div class="slide darkgray-txt center quarter" ng-repeat="slide in slides">
-					<a class="datascore middle lightgray-bg" ng-click="next()">
-						<img class="full" src="assets/images/icons/spinner_icon_25.png">							
-					</a>
-					<h3>Is your <br>data healthy?</h3>
-					<p>Lorem ipsum dolor sit amet, usu tation audiam animal eu, mei dolorum pericula eu. Ut mollis detracto menandri has, libris docendi atomorum duo an.</p>
+
+	<div class="white-bg full">
+		<div class="wrapper">
+			<div class="full pad">
+				<h3 class="center">Paradata delivers</h3>
+				<div class="third pad center">
+					<h4 class="bubble secondary-bg white-txt">1</h4>
 					<p>
-						<a href="#">Learn more</a>
+						Quickly analyze each bill of materials to improve operating profit, reduce supply risk, and adjust to demand variability.
+						<br>
+						<br>
+						<br class="desktop tablet">
+						<a href="http://paradata.io/#/solutions#1">Learn more</a>
 					</p>
-					<button class="prev">Prev</button>
-					<button class="next">Next</button>
 				</div>
-				<div class="slide darkgray-txt center quarter" ng-repeat="slide in slides">
-					<a class="datascore middle lightgray-bg" ng-click="next()">
-						<img class="full" src="assets/images/icons/spinner_icon_50.png">							
-					</a>
-					<h3>Are your Sources Reliable?</h3>
-					<p>Lorem ipsum dolor sit amet, usu tation audiam animal eu, mei dolorum pericula eu. Ut mollis detracto menandri has, libris docendi atomorum duo an.</p>
+				<div class="third pad center">
+					<h4 class="bubble secondary-bg white-txt">​2</h4>
 					<p>
-						<a href="#">Learn more</a>
+						Assesses existing prices compared to best public prices, delivering lower material costs.
+						<br>
+						<br>
+						<br class="desktop tablet">
+						<br class="desktop tablet">
+						<a href="http://paradata.io/#/solutions#2">Learn more</a>
 					</p>
-					<button class="prev">Prev</button>
-					<button class="next">Next</button>
 				</div>
-				<div class="slide darkgray-txt center quarter" ng-repeat="slide in slides">
-					<a class="datascore middle lightgray-bg" ng-click="next()">
-						<img class="full" src="assets/images/icons/spinner_icon_75.png">							
-					</a>
-					<h3>Are your expenses Optimized?</h3>
-					<p>Lorem ipsum dolor sit amet, usu tation audiam animal eu, mei dolorum pericula eu. Ut mollis detracto menandri has, libris docendi atomorum duo an.</p>
+				<div class="third pad center">
+					<h4 class="bubble secondary-bg white-txt">3</h4>
 					<p>
-						<a href="#">Learn more</a>
+						Provides component and supplier catalogs along with authenticated dataset tools to improve analysis and optimize business processes.
+						<br>
+						<br>
+						<a href="http://paradata.io/#/solutions#3">Learn more</a>
 					</p>
-					<button class="prev">Prev</button>
-					<button class="next">Next</button>
-				</div>
-				<div class="slide darkgray-txt center quarter" ng-repeat="slide in slides">
-					<a class="datascore middle lightgray-bg" ng-click="next()">
-						<img class="full" src="assets/images/icons/spinner_icon_100.png">							
-					</a>
-					<h3>Are you tracking changes in real time?</h3>
-					<p>Lorem ipsum dolor sit amet, usu tation audiam animal eu, mei dolorum pericula eu. Ut mollis detracto menandri has, libris docendi atomorum duo an.</p>
-					<p>
-						<a href="#">Learn more</a>
-					</p>
-					<button class="prev">Prev</button>
-					<button class="next">Next</button>
-				</div>
-			</div>
-			<div class="intro full">
-				<div class="wrapper middle pad">
-					<h3 class="center">How does Paradata work?</h3>
-					<video class="middle" width="500" height="281" frameborder="0" controls>
-						<source src="assets/videos/paradata_solutions-hd.mp4" type="video/mp4">
-						Your browser does not support HTML5 video. Please download a modern browser, like <a href="https://www.google.com/chrome/browser/desktop/">Google Chrome</a>.
-					</video>
 				</div>
 			</div>
 		</div>
+	</div>
 		<footer class="full">
 			<div class="wrapper middle">
 				<div class="half pad">
@@ -141,7 +123,6 @@
 						<p>
 							<a href="{{navitem.link}}" ng-repeat="navitem in sitemap.footer.navitems">Company</a><br>
 							<a href="{{navitem.link}}">Careers</a><br>
-							<a href="{{navitem.link}}">Blog</a><br>
 						</p>
 					</nav>
 					<div class="social">
@@ -160,11 +141,6 @@
 							<li ng-repeat="social in socials">
 								<a href="{{social.link}}" target="_blank">
 									<img src="assets/images/icons/social_icon_linkedin.png" alt="">
-								</a>
-							</li>
-							<li ng-repeat="social in socials">
-								<a href="{{social.link}}" target="_blank">
-									<img src="assets/images/icons/social_icon_google_plus.png" alt="">
 								</a>
 							</li>
 						</ul>
