--- a/public/css/paradata.css
+++ b/public/css/paradata.css
@@ -85,6 +85,7 @@ h3 {
 }
 p {
 	font-size: 20px;
+
 }
 header {
 	background: #586473;
@@ -176,6 +177,7 @@ header nav li a:hover {
 	background: #fff;
 }
 .slide {
+	color: black;
 	padding: 100px 20px 20px;
 	position: relative;
 	-webkit-transition: all .3s ease-in;
