static homepage complete except for carousel

--- a/craft/templates/index.html
+++ b/craft/templates/index.html
@@ -68,12 +68,12 @@
 						TRANSPARENCY MEETS SUPPLY CHAIN
 					</h1>
 					<p style="width:40%;max-width:350px;">
-						THE NETWORK SCORE℠ <br/>
+						THE NETWORK SCORE℠ <br/><br/
 
-						<i>"If your product could say what it needs to be healthy, what would it say?"</i><br/>
+						<i>"If your product could say what it needs to be healthy, what would it say?"</i><br/><br/>
 
 						The Paradata Network Score measures a supply chain in four dimensions: Leadtime, Cost, Compliance, and Risk.
-					</p> l,;./
+					</p>
 					<a class="button" href="#">WHAT'S YOUR SCORE?</a>
 				</div>
 			</div>
@@ -112,6 +112,23 @@
 						<br>
 						<a href="http://paradata.io/#/solutions#3">Learn more</a>
 					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="lightgray-bg intro full">
+		<div class="wrapper middle">
+			<div class="full">
+				<div class="half pad">
+					<h3>Schedule a demo</h3>
+					<h4>Get a complimentary gourmet coffee gift card</h4>
+					<p>
+						Supply chain discovery and transparency for less than the cost of two lattes per month.<br>
+						The first <img class="inline-icon" src="./images/icons/icon_networkscore.png" alt="Paradata Network Score" title="Paradata Network Score"> is on us!
+					</p>
+				</div>
+				<div class="half pad">
+					<img class="full" src="./images/coffee_cups.png" alt="Free gourmet coffee gift card" title="Free gourmet coffee gift card!">
 				</div>
 			</div>
 		</div>
