added carousel without functionality, css updated

--- a/craft/templates/carousel.html
+++ b/craft/templates/carousel.html
@@ -1,4 +1,4 @@
-		<!-- ngView:  --><div class="main full ng-scope" ng-view="" autoscroll="true"><!-- ngInclude:  --><div class="chimera full ng-scope" ng-include="" src="template"><div class="content full ng-scope">
+<div class="main full ng-scope" ng-view="" autoscroll="true"><!-- ngInclude:  --><div class="chimera full ng-scope" ng-include="" src="template"><div class="content full ng-scope">
 	<div class="hero home full ng-isolate-scope" parallax-background="" parallax-ratio="0.2" style="background-position: 50% 16px;"><div ng-transclude="">
 		<div class="hero-overlay full ng-scope">
 			<div class="slideshow full ng-isolate-scope" slideshow="healthscore">
