--- a/public/css/paradata.css
+++ b/public/css/paradata.css
@@ -63,7 +63,7 @@ Dark Gray	     | #222
 	box-sizing: border-box;
 }
 body {
-	background: url("../images/backgrounds/texture_tile-bg.png") #222;
+	background: url("../images/backgrounds/texture_tile-bg.png") ;
 	background-attachment: fixed;
 	color: #222;
 	margin: 0;
@@ -141,7 +141,7 @@ header nav li a:hover {
 	padding-top: 80px;
 }
 .hero {
-	background: url("../images/backgrounds/background-homepage-1.jpg");
+	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/backgrounds/background-homepage-1.jpg");
 	background-color: #0387ab;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -175,7 +175,6 @@ header nav li a:hover {
 	background: #fff;
 }
 .slide {
-	padding: 100px 20px 20px;
 	position: relative;
 	-webkit-transition: all .3s ease-in;
 	transition: all .3s ease-in;
@@ -266,6 +265,12 @@ footer .social li a img {
     border: none;
 }
 
+.button-body:hover {
+    background: #75bbce;
+    color: #fff !important;
+    border: none;
+}
+
 .hero .button, .button-body {
     margin: 20px 0;
     padding: 10px 15px;
@@ -274,4 +279,38 @@ footer .social li a img {
     text-transform: uppercase;
     text-decoration: none;
     display: inline-block;
+}
+
+.hero .button:hover, .button-body:hover {
+    box-shadow: 0px 5px 5px rgba(0,0,0,0.2);
+}
+
+.texture-bg {
+    background-image: url("../images/backgrounds/texture_tile-bg.png");
+}
+
+.bubble {
+    width: 2em;
+    height: 2em;
+    margin: 0;
+    border-radius: 2em;
+    line-height: 2em;
+    display: inline-block;
+}
+
+footer.full {
+    background-image: url("../images/backgrounds/texture_tile-bg.png");
+    background-color: black;
+}
+
+.white-bg p a, .lightgray-bg p a, .midgray-bg p a {
+    border-bottom: 1px solid #0387ab;
+}
+
+.white-bg p a:hover, .lightgray-bg p a:hover, .midgray-bg p a:hover {
+    border-bottom: 1px solid #75bbce;
+}
+
+.white-bg a:hover, .lightgray-bg a:hover, .midgray-bg a:hover, .darkgray-bg a:hover {
+    color: #75bbce;
 }
